--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}" style="background-color: #aca5ae">
+<html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,8 +15,8 @@
   </head>
 
   <body>
-    <div id="container" style="background-color: #aca5ae">
-      <div class="inner" style="width: 60%">
+    <div id="container">
+      <div class="inner" style="width: 70%; background-color: white; padding-left: 1%; padding-right: 1% ">
 
         <header>
           <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
