--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
   <body>
     <div id="container">
-      <div class="inner" style="width: '70%'; background-color: white; padding-left: '2%'; padding-right: '2%'">
+      <div class="inner" style="width: 70%; background-color: white; padding-left: 2%; padding-right: 2%">
 
         <header>
           <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
