--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
           <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
           <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         </header>
-        <section id="downloads" class="clearfix">
+        <section id="downloads" class="clearfix" style="margin-bottom: 0;">
 	  By Saifulmasud <br />
 	  10 May 2024
           {% if site.show_downloads %}
