--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,11 +20,13 @@
 
         <header>
           <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-          <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+          <!-- <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2> //-->
         </header>
         <section id="downloads" class="clearfix" style="margin-bottom: 0;">
-	  By Saifulmasud <br />
-	  10 May 2024
+	  <p style="margin:0; padding: 0; font-size: 25px">
+		By Saifulmasud <br />
+	  	10 May 2024  
+	  </p>
           {% if site.show_downloads %}
           <a href="{{ site.github.zip_url }}" id="download-zip" class="button"><span>Download .zip</span></a>
           <a href="{{ site.github.tar_url }}" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
