--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,18 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-{% seo %}
+    {% seo %}
     {% include head-custom.html %}
+
+    <style>
+    	#main_content h2 {
+	    	font-size: 33px;
+	    	color: #727272;
+		}
+    	#main_content p {
+			font-size: 20px;
+		}
+    </style>
   </head>
 
   <body>
@@ -23,7 +33,7 @@
           <!-- <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2> //-->
         </header>
         <section id="downloads" class="clearfix" style="margin-bottom: 0;">
-	  <p style="margin:0; padding: 0; font-size: 25px">
+	  <p style="margin:0; padding: 0; font-size: 25px: color: #b2b2b2;">
 		By Saifulmasud <br />
 	  	10 May 2024  
 	  </p>
