--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
           <!-- <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2> //-->
         </header>
         <section id="downloads" class="clearfix" style="margin-bottom: 0;">
-	  <p style="margin:0; padding: 0; font-size: 25px: color: #b2b2b2;">
+	  <p style="margin:0; padding: 0; font-size: 25px; color: #b2b2b2;">
 		By Saifulmasud <br />
 	  	10 May 2024  
 	  </p>
