--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,23 @@
     	#main_content h2 {
 	    	font-size: 32px;
 	    	color: #727272;
+		margin-bottom: 20px;
 		}
     	#main_content p {
 			font-size: 20px;
+		}
+		#main_content h3 {
+		    font-size: 25px;
+		    color: #303030;
+		    background-color: #e4e4e4;
+		    padding: 25px;
+			margin-bottom: 25px;
+		}
+
+		#main_content h4 {
+			font-size: 20px;
+		    font-weight: bold;
+		    margin-bottom: 10px;
 		}
     </style>
   </head>
