--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,16 +24,23 @@
 		}
 		#main_content h3 {
 		    font-size: 25px;
-		    color: #303030;
+		    color: #727272;
 		    background-color: #e4e4e4;
-		    padding: 25px;
-			margin-bottom: 25px;
+		    padding: 20px;
+		    margin-bottom: 25px;
+		    font-weight: 900;
 		}
 
 		#main_content h4 {
-			font-size: 20px;
-		    font-weight: bold;
-		    margin-bottom: 10px;
+		    font-size: 20px;
+		    font-weight: 900;
+		    margin-bottom: 15px;
+		    color: #303030;
+		}
+
+		#main_content h5 {
+		    font-weight: 700;
+		    padding-bottom: 7px;
 		}
     </style>
   </head>
