--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
 	    	font-size: 32px;
 	    	color: #727272;
 			margin-bottom: 20px;
+			font-weight: 900;
 		}
     	#main_content p {
 			font-size: 20px;
