--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,33 +15,39 @@
 
     <style>
     	#main_content h2 {
-	    	font-size: 32px;
-	    	color: #727272;
-			margin-bottom: 20px;
-			font-weight: 900;
+		    font-size: 32px;
+		    color: #727272;
+		    margin-bottom: 20px;
+		    font-weight: 900;
 		}
     	#main_content p {
 			font-size: 20px;
 		}
 		#main_content h3 {
-		    font-size: 25px;
+		    font-size: 28px;
 		    color: #727272;
-		    background-color: #e4e4e4;
+		    background-color: #fff2de;
 		    padding: 20px;
 		    margin-bottom: 25px;
 		    font-weight: 900;
 		}
 
 		#main_content h4 {
-		    font-size: 20px;
+		    font-size: 23px;
 		    font-weight: 900;
 		    margin-bottom: 15px;
-		    color: #303030;
+		    color: #0097ff;
 		}
 
 		#main_content h5 {
-		    font-weight: 700;
+		    font-weight: 900;
 		    padding-bottom: 7px;
+		    font-size: 18px;
+		    color: #727272;
+		}
+
+		code, pre {
+			font-size: 16px;
 		}
     </style>
   </head>
@@ -55,7 +61,7 @@
           <!-- <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2> //-->
         </header>
         <section id="downloads" class="clearfix" style="margin-bottom: 0;">
-	  <p style="margin:0; padding: 0; font-size: 25px; color: #b2b2b2;">
+	  <p style="margin:0; padding: 0; font-size: 25px; color: #0097ff;">
 		By Saifulmasud <br />
 	  	10 May 2024  
 	  </p>
