--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 		#main_content h4 {
 		    font-size: 23px;
 		    font-weight: 900;
-		    margin-bottom: 15px;
+		    margin-bottom: 10px;
 		    color: #0097ff;
 		}
 
@@ -48,6 +48,14 @@
 
 		code, pre {
 			font-size: 16px;
+		}
+
+		.highlight .c, 
+		.highlight .cd, 
+		.highlight .cm, 
+		.highlight .c1, 
+		.highlight .cs {
+		    color: #66c1c5;
 		}
     </style>
   </head>
