--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,12 @@
 		    color: #727272;
 		}
 
+		#main_content h6 {
+		    font-weight: bold;
+		    margin-bottom: 10px;
+		    font-size: 16px;
+		}
+		
 		#main_content p {
 			font-size: 18px;
 		}
