--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,7 +96,18 @@
         </section>
 	      
         <section id="main_content">
-          {{ content }}
+          	{{ content }}
+
+			<div class="utterances">
+				<script src="https://utteranc.es/client.js"
+				        repo="masudsaiful/javascript-async-await-step-by-step-tutorial"
+				        issue-term="pathname"
+				        label="Comment"
+				        theme="github-light"
+				        crossorigin="anonymous"
+				        async>
+				</script>
+			</div>
         </section>
 
         <footer>
