Updated callback function articles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,6 +66,14 @@
 		.highlight .cs {
 		    color: #66c1c5;
 		}
+
+		.utterances .timeline-header {
+			font-size: 18px;
+		}
+
+		.utterances .timeline-header em {
+			visibility: hidden;
+		}
     </style>
   </head>
 
