Updated callback function articles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,11 +67,11 @@
 		    color: #66c1c5;
 		}
 
-		.utterances .timeline-header {
+		.utterances h1.timeline-header {
 			font-size: 18px;
 		}
 
-		.utterances .timeline-header em {
+		.utterances h1.timeline-header em {
 			visibility: hidden;
 		}
     </style>
