--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,11 +68,11 @@
 		}
 
 		.utterances h1.timeline-header {
-			font-size: 18px;
+			font-size: 18px!important;
 		}
 
 		.utterances h1.timeline-header em {
-			visibility: hidden;
+			visibility: hidden!important;
 		}
     </style>
   </head>
