--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,9 +46,10 @@
 		}
 
 		#main_content h6 {
-		    font-weight: bold;
-		    margin-bottom: 10px;
-		    font-size: 16px;
+			font-weight: bold;
+			margin-bottom: 10px;
+			font-size: 16px;
+			color: #555555cc;
 		}
 		
 		#main_content p {
