--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,6 +75,14 @@
 		.utterances iframe h1.timeline-header em {
 			visibility: hidden!important;
 		}
+
+		h2#lets-a-short-overview-all-of-them {
+			margin-bottom: 0;
+		}
+
+		h6#please-read-all-sections-consecutively-for-ease-of-understanding-one-section-is-inextricably-linked-with-another-section {
+			margin-bottom: 20px;
+		}
     </style>
 	<meta name="google-site-verification" content="vgbr_tBBr8S1z_i_3qWQj5AcfRU9lc6r5v9CdX962ZU" />
   </head>
