--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,10 +78,11 @@
 
 		h2#lets-a-short-overview-all-of-them {
 			margin-bottom: 0;
+			margin-top: 30px;
 		}
 
 		h6#please-read-all-sections-consecutively-for-ease-of-understanding-one-section-is-inextricably-linked-with-another-section {
-			margin-bottom: 20px;
+			margin-bottom: 30px;
 		}
     </style>
 	<meta name="google-site-verification" content="vgbr_tBBr8S1z_i_3qWQj5AcfRU9lc6r5v9CdX962ZU" />
