--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,22 +89,23 @@
 
 		/* Copy Code */
 		.copy-code-button {
-			background-color: #4CAF50;
-			border: none;
-			color: white;
-			padding: 5px 10px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-			font-size: 14px;
-			margin: 4px 2px;
-			cursor: pointer;
-			border-radius: 4px;
-		}
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+}
 
-		.copy-code-button:hover {
-			background-color: #45a049;
-		}
+.copy-code-button:hover {
+    background-color: #45a049;
+}
+
 
     </style>
 	<meta name="google-site-verification" content="vgbr_tBBr8S1z_i_3qWQj5AcfRU9lc6r5v9CdX962ZU" />
@@ -160,6 +161,6 @@
 
       </div>
     </div>
-	<script src="_scripts/custom-scripts.js"></script>
+	<script src="/_scripts/custom-scripts.js"></script>
   </body>
 </html>
