Copy to clipboard in markdown page...

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -157,6 +157,6 @@
 
       </div>
     </div>
-	<script src="/scripts/custom-scripts.js"></script>
+	<script src="/_scripts/custom-scripts.js"></script>
   </body>
 </html>
