--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -157,6 +157,6 @@
 
       </div>
     </div>
-	<script src="/javascript-async-await-step-by-step-tutorial/_assets/scripts/custom-scripts.js"></script>
+	<script src="https://masudsaiful.github.io/javascript-async-await-step-by-step-tutorial/_assets/scripts/custom-scripts.js"></script>
   </body>
 </html>
