--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -181,6 +181,6 @@
 			});
 		});
 	</script>
-	<script src="/scripts/custom-scripts.js"></script>
+	<script src="/javascript-async-await-step-by-step-tutorial/scripts/custom-scripts.js"></script>
   </body>
 </html>
