--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,11 +93,11 @@
 			padding: 5px 10px;
 			text-align: center;
 			text-decoration: none;
-			display: inline-block;
 			font-size: 14px;
 			margin: 4px 2px;
 			cursor: pointer;
 			border-radius: 4px;
+			float:right;
 		}
 
 		.copy-code-button:hover {
