--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,14 @@
 			color: #555555cc;
 		}
 		
+		#main_content h6 a {
+			color: #0097ff
+		}
+
+		#main_content h6 a:hover {
+			color: #45a049
+		}
+
 		#main_content p {
 			font-size: 18px;
 		}
