--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
-    <meta charset='utf-8'>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta charset='utf-8'>
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Javascript Async Await Easy and Step by Step Tutorial, Javascript Callback, Javascript Promise, Javascript Synchronous, Javascript Asynchronous">
+	<meta name="keywords" content="Javascript, Callback, Callback Hell, Promise, Async Await"> 
+	<meta name="author" content="Masud, Saifulmasud, Saiful Masud, MD Saiful Islam Khan Masud">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link rel="stylesheet" type="text/css" href="{{ '/assets/css/print.css' | relative_url }}" media="print">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    	<link rel="stylesheet" type="text/css" href="{{ '/assets/css/print.css' | relative_url }}" media="print">
+    	<!--[if lt IE 9]>
+    		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    	<![endif]-->
 
-    {% seo %}
-    {% include head-custom.html %}
-
-    <style>
-    	#main_content h2 {
+    	{% seo %}
+    	{% include head-custom.html %}
+	  
+    	<style>
+    		#main_content h2 {
 		    font-size: 32px;
 		    color: #727272;
 		    margin-bottom: 20px;
@@ -39,10 +41,10 @@
 		}
 
 		#main_content h5 {
-		    font-weight: 900;
-		    padding-bottom: 7px;
-		    font-size: 20px;
-		    color: #727272;
+			font-weight: 900;
+			padding-bottom: 7px;
+			font-size: 20px;
+			color: #727272;
 		}
 
 		#main_content h6 {
@@ -111,7 +113,7 @@
 		.copy-code-button:hover {
 			background-color: #45a049;
 		}
-    </style>
+    	</style>
 	<meta name="google-site-verification" content="vgbr_tBBr8S1z_i_3qWQj5AcfRU9lc6r5v9CdX962ZU" />
   </head>
 
