--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+	<title>Mastering Javascript Asynchronous Programming: from Callbacks to Async/Await - A Comprehensive Guide with Examples</title>
     	<meta charset='utf-8'>
     	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Javascript Async Await Easy and Step by Step Tutorial, Javascript Callback, Javascript Promise, Javascript Synchronous, Javascript Asynchronous">
